2004-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-add-w3m-initial-frames): Share the opened frame
	in w3m-initial-frames over all emacs-w3m buffers if w3m-use-tab is
	non-nil.
	(w3m-delete-w3m-initial-frames): New function; add it to
	delete-frame-functions or delete-frame-hook, or merge into
	delete-frame using defadvice.
	(w3m-delete-frames-and-windows): Return to the former buffer after
	performing walk-windows; don't manage w3m-initial-frames.

	* w3m.el (w3m-delete-buffer): Don't manage w3m-initial-frames.

2004-06-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-bbc.el (shimbun-bbc-content-start): Relaxed.

2004-06-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Strict
	checking whether images are successfuly retrieved.

2004-06-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Give up to
	fetch HH:MM data in the business group; add anchordesk, bursts and
	technology groups.
	(shimbun-get-headers): Don't miss headers even if HH:MM is missing;
	sort headers by date.

2004-06-22  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Update url
	and regexp for the enterprise group; add the business group.

2004-06-14  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m.el (TopLevel): Display meaningful message when w3m-command
	is nil.

2004-06-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-fontify): Call `w3m-replace-symbol' before
	`w3m-fontify-anchors' in order not to lose text properties.

2004-06-14  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-welt-de.el: New file.

2004-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Don't work
	for the editorial and the tenjin groups when newspaper holidays.

2004-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Run w3m-mode before popping to the newly created
	buffer up.
