@@ -1,3 +1,10 @@
+2004-06-25  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/sb-emacs-w3m.el: New file.
+
+	* shimbun/sb-namazu.el (shimbun-namazu-groups): Remove "emacs-w3m"
+	entry.
+
 2004-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-util.el (w3m-add-w3m-initial-frames): Share the opened frame
